--- a/.github/workflows/fetch_and_push.yml
+++ b/.github/workflows/fetch_and_push.yml
@@ -1,10 +1,58 @@
 name: Fetch SEC & News, push to Hostinger
 
 on:
+  schedule:
+    - cron: "*/30 * * * *"
   workflow_dispatch:
 
 jobs:
-  ping:
+  build-and-upload:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "workflow wiring OK"
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install deps
+        run: python -m pip install --upgrade pip requests
+
+      - name: Run fetcher
+        env:
+          UA: ${{ secrets.FETCH_UA }}
+          OUT_DIR: out
+          NEWS_LOOKBACK_HOURS: "30"
+          TOPN_FOR_NEWS: "120"
+        run: |
+          python fetch_sec_and_news.py
+          ls -lh out
+
+      - name: Upload via SFTP (3x retry)
+        env:
+          SFTP_HOST: ${{ secrets.SFTP_HOST }}
+          SFTP_PORT: ${{ secrets.SFTP_PORT }}
+          SFTP_USER: ${{ secrets.SFTP_USER }}
+          SFTP_PASS: ${{ secrets.SFTP_PASS }}
+          SFTP_DIR:  ${{ secrets.SFTP_DIR }}
+        run: |
+          set -e
+          sudo apt-get update -y
+          sudo apt-get install -y sshpass
+          tries=0
+          until [ $tries -ge 3 ]; do
+            echo "SFTP attempt $((tries+1))..."
+            sshpass -p "$SFTP_PASS" sftp -oBatchMode=no -oStrictHostKeyChecking=no -P "$SFTP_PORT" "$SFTP_USER@$SFTP_HOST" <<'EOF' && break
+cd $SFTP_DIR
+lcd out
+mput -q *.json
+EOF
+            tries=$((tries+1))
+            echo "Retrying in 6s..."
+            sleep 6
+          done
+          if [ $tries -ge 3 ]; then
+            echo "SFTP failed after 3 attempts"; exit 1
+          fi
