--- a/.github/workflows/fetch_and_push.yml
+++ b/.github/workflows/fetch_and_push.yml
@@ -1,36 +1,3 @@
-name: Fetch SEC & News, push to Hostinger
-
-on:
-  workflow_dispatch:
-  schedule:
-    - cron: "*/30 * * * *"   # every 30 minutes
-
-jobs:
-  build-and-upload:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install deps
-        run: |
-          python -m pip install --upgrade pip requests feedparser beautifulsoup4 lxml
-
-      - name: Run fetcher
-        env:
-          UA: ${{ secrets.FETCH_UA }}
-          OUT_DIR: out
-          NEWS_LOOKBACK_HOURS: "30"
-          TOPN_FOR_NEWS: "120"
-        run: |
-          python fetch_sec_and_news.py
-          ls -lh out
-
       - name: Upload via SFTP (3x retry)
         env:
           SFTP_HOST: ${{ secrets.SFTP_HOST }}
@@ -38,7 +5,6 @@ jobs:
           SFTP_USER: ${{ secrets.SFTP_USER }}
           SFTP_PASS: ${{ secrets.SFTP_PASS }}
           SFTP_DIR:  ${{ secrets.SFTP_DIR }}
-        shell: bash
         run: |
           set -e
           sudo apt-get update -y
@@ -47,12 +13,18 @@ jobs:
           tries=0
           until [ $tries -ge 3 ]; do
             echo "SFTP attempt $((tries+1))..."
-            sshpass -p "$SFTP_PASS" sftp -oBatchMode=no -oStrictHostKeyChecking=no -P "$SFTP_PORT" "$SFTP_USER@$SFTP_HOST" <<'EOF' && break
-            lcd out
-            cd "$SFTP_DIR"
-            mput -q *.json
-            bye
-EOF
+
+            # Build an SFTP batch file (no YAML heredoc issues)
+            cat > cmds.sftp <<CMDS
+lcd out
+cd "$SFTP_DIR"
+mput -q *.json
+bye
+CMDS
+
+            SSHPASS="$SFTP_PASS" sftp -oBatchMode=no -oStrictHostKeyChecking=no -P "$SFTP_PORT" \
+              "$SFTP_USER@$SFTP_HOST" -b cmds.sftp && break
+
             tries=$((tries+1))
             echo "Retrying in 6s..."
             sleep 6
