--- a/.github/workflows/fetch_and_push.yml
+++ b/.github/workflows/fetch_and_push.yml
@@ -1,3 +1,37 @@
+name: Fetch SEC & News, push to Hostinger
+
+on:
+  schedule:
+    - cron: "*/30 * * * *"   # every 30 minutes
+  workflow_dispatch:
+
+jobs:
+  build-and-upload:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install deps
+        run: python -m pip install --upgrade pip requests
+
+      - name: Run fetcher
+        env:
+          UA: ${{ secrets.FETCH_UA }}
+          OUT_DIR: out
+          NEWS_LOOKBACK_HOURS: "30"
+          TOPN_FOR_NEWS: "120"
+        run: |
+          python fetch_sec_and_news.py
+          ls -lh out
+
+      # Robust SFTP upload with 3 retries (avoids YAML heredoc pitfalls)
       - name: Upload via SFTP (3x retry)
         env:
           SFTP_HOST: ${{ secrets.SFTP_HOST }}
@@ -14,7 +48,7 @@
           until [ $tries -ge 3 ]; do
             echo "SFTP attempt $((tries+1))..."
 
-            # Build an SFTP batch file (no YAML heredoc issues)
+            # Build SFTP command batch (no YAML heredoc headaches)
             cat > cmds.sftp <<CMDS
 lcd out
 cd "$SFTP_DIR"
