--- a/.github/workflows/sec_only.yml
+++ b/.github/workflows/sec_only.yml
@@ -3,33 +3,30 @@ name: SEC Filings Only — Step 6
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 9 * * 1-5"  # 9:00 UTC (~4am ET) weekdays
+    - cron: "0 14 * * *"   # runs daily at 14:00 UTC (09:00 ET)
 
 jobs:
   sec_only:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: '3.10'
 
-      - name: Install deps
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests
+          pip install requests pandas lxml beautifulsoup4
 
       - name: Run SEC-only fetch
-        env:
-          SEC_USER_AGENT: ${{ secrets.FETCH_UA }}
-          MAX_PAGES: "24"
-          COUNT_PER_PAGE: "100"
         run: |
           mkdir -p data
           python sec_only.py
-          ls -lh data
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -38,15 +35,3 @@ jobs:
           path: |
             data/sec_filings_snapshot.json
             data/sec_filings_snapshot.csv
-
-      - name: Deploy to Hostinger via SFTP
-        uses: wlixcc/SFTP-Deploy-Action@v1.2.4
-        with:
-          server: ${{ secrets.SFTP_HOST }}
-          username: ${{ secrets.SFTP_USER }}
-          password: ${{ secrets.SFTP_PASS }}
-          port: ${{ secrets.SFTP_PORT }}
-          local_path: "data/sec_filings_snapshot.*"
-          remote_path: ${{ secrets.SFTP_DIR }}
-          sftp_only: true
-          delete: false
