--- a/.github/workflows/sec_only.yml
+++ b/.github/workflows/sec_only.yml
@@ -12,6 +12,9 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          persist-credentials: true
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -29,9 +32,11 @@ jobs:
           python sec_only.py
 
       - name: Commit and push results
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add data/sec_filings_snapshot.json data/sec_filings_snapshot.csv || true
           git commit -m "Update SEC filings snapshot [skip ci]" || echo "No changes to commit"
-          git push
+          git push origin HEAD:${GITHUB_REF##*/}
