--- a/.github/workflows/sec_only.yml
+++ b/.github/workflows/sec_only.yml
@@ -39,4 +39,4 @@ jobs:
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add data/sec_filings_snapshot.json data/sec_filings_snapshot.csv || true
           git commit -m "Update SEC filings snapshot [skip ci]" || echo "No changes to commit"
-          git push origin HEAD:${GITHUB_REF##*/}
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} HEAD:${GITHUB_REF##*/}
