--- a/.github/workflows/sec_only.yml
+++ b/.github/workflows/sec_only.yml
@@ -43,7 +43,7 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add data/sec_filings_snapshot.json data/sec_filings_snapshot.csv data/sec_filings_raw.json data/sec_debug_stats.json || true
-          git commit -m "Update SEC filings snapshot + debug [skip ci]" || echo "No changes to commit"
+          git commit -m "Step6 v14: snapshot (yesterday+today ET) + debug [skip ci]" || echo "No changes to commit"
           git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} HEAD:${GITHUB_REF##*/}
 
       - name: Deploy to Hostinger via HTTPS webhook (verbose)
