--- a/.github/workflows/sec_only.yml
+++ b/.github/workflows/sec_only.yml
@@ -29,9 +29,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install requests pandas lxml beautifulsoup4
 
-      - name: Run SEC-only fetch
+      - name: Run SEC-only fetch (yesterday+today ET, SEC-SIC bans)
         env:
           FETCH_UA: ${{ secrets.FETCH_UA }}
+          BAN_TICKERS: ${{ vars.BAN_TICKERS }}
+          BAN_INDUSTRIES: ${{ vars.BAN_INDUSTRIES }}
+          BAN_COMPANIES: ${{ vars.BAN_COMPANIES }}
         run: |
           mkdir -p data
           python sec_only.py
@@ -43,7 +46,7 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add data/sec_filings_snapshot.json data/sec_filings_snapshot.csv data/sec_filings_raw.json data/sec_debug_stats.json || true
-          git commit -m "Step6 v14: snapshot (yesterday+today ET) + debug [skip ci]" || echo "No changes to commit"
+          git commit -m "Step6 v17: SEC SIC-aligned bans + enrichment [skip ci]" || echo "No changes to commit"
           git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} HEAD:${GITHUB_REF##*/}
 
       - name: Deploy to Hostinger via HTTPS webhook (verbose)
