--- a/config/settings.json
+++ b/config/settings.json
@@ -1,6 +1,6 @@
 {
-  "user_agent": "GrandMasterSEC/1.0 (contact: youremail@example.com)",
-  "contact_email": "youremail@example.com",
+  "user_agent": "GrandMasterSEC/1.0 (contact: chrisjohnson11835@gmail.com)",
+  "contact_email": "chrisjohnson11835@gmail.com",
   "timezone": "America/New_York",
   "max_pages": 60,
   "count_per_page": 200,
