--- a/config/settings.json
+++ b/config/settings.json
@@ -2,12 +2,15 @@
   "user_agent": "GrandMasterSEC/1.0 (contact: chrisjohnson11835@gmail.com)",
   "contact_email": "chrisjohnson11835@gmail.com",
   "timezone": "America/New_York",
-  "max_pages": 60,
-  "count_per_page": 200,
+  "max_pages": 400,
+  "count_per_page": 100,
   "min_score_for_recommend": 60,
   "enable_webhook_deploy": true,
-  "webhook_url": "https://YOUR_DOMAIN.com/deploy/receiver.php",
+  "webhook_url": "https://royalblue-lion-727879.hostingersite.com/deploy/receiver.php",
   "webhook_secret": "CHANGE_ME",
+  "retry_503": 5,
+  "max_empty_pages": 8,
+  "page_pause_sec": 1.2,
   "hostinger_allowed_filenames": [
     "sec_filings_snapshot.json",
     "sec_filings_snapshot.csv",
