--- a/.github/workflows/run-sec-scan.yml
+++ b/.github/workflows/run-sec-scan.yml
@@ -4,11 +4,20 @@ on:
   workflow_dispatch: {}
   schedule:
     - cron: "5 13 * * 1-5"   # 09:05 ET summer
+    - cron: "20 13 * * 1-5"  # fallback pass
+    - cron: "35 13 * * 1-5"  # fallback pass
     - cron: "5 14 * * 1-5"   # 09:05 ET winter (DST-proof)
+    - cron: "20 14 * * 1-5"  # fallback pass
+    - cron: "35 14 * * 1-5"  # fallback pass
+
+concurrency:
+  group: sec-scan
+  cancel-in-progress: true
+
 jobs:
   scan:
     runs-on: ubuntu-latest
-    timeout-minutes: 45
+    timeout-minutes: 180
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
@@ -19,9 +28,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install feedparser pandas python-dateutil requests
-      - name: Run until boundary
+      - name: Run until boundary (time-aware)
         env:
-          RUNNER_MAX_ATTEMPTS: "6"
-          RUNNER_BACKOFFS: "0,45,90,180,300,420"
+          RUNNER_MAX_ATTEMPTS: "10"
+          RUNNER_BACKOFFS: "0,60,120,180,240,300,420,600,900,1200"
+          RUNNER_MAX_WALL_SECS: "6600"  # ~110 minutes; leaves buffer under 180m job limit
         run: |
           python run_until_boundary.py
