--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-requests>=2.32.0
-pandas>=2.0.0
-python-dateutil>=2.8.2
-feedparser>=6.0.10
+requests
+beautifulsoup4
+lxml
+python-dateutil
+pytz
+pandas
