--- a/.github/workflows/grandmaster_sec_0930.yml
+++ b/.github/workflows/grandmaster_sec_0930.yml
@@ -1,4 +1,4 @@
-name: GrandMaster SEC | 09:30→09:30 Boundary Scan (Self-Healing, v23.1 FT)
+name: GrandMaster SEC | 09:30→09:30 Boundary Scan (Self-Healing, v23.1b FT)
 
 on:
   workflow_dispatch: {}
@@ -21,7 +21,7 @@ jobs:
         run: |
           python - << 'PY'
           import json, os, pathlib
-          p=pathlib.Path("configs/config.json"); cfg=json.loads(p.read_text())
+          p=pathlib.Path("config/config.json"); cfg=json.loads(p.read_text())
           for k in ("CONTACT_EMAIL","UA_ORG","HOSTINGER_UPLOAD_URL","HOSTINGER_SECRET"):
             v=os.getenv(k)
             if not v: continue
@@ -35,9 +35,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Run Grand Master SEC v23.1 (Full-Text forced)
+      - name: Run Grand Master SEC v23.1b (Full-Text forced)
         run: |
-          python scripts/sec/grandmaster_sec_v23.py
+          python -u scripts/sec/grandmaster_sec_v23.py
       - name: Show artifacts
         if: always()
         run: |
