--- a/config/config.json
+++ b/config/config.json
@@ -4,6 +4,6 @@
   "user_agent": "GrandMasterSEC/23.2M (+chrisjohnson11835@gmail.com)",
   "reqs_per_sec": 0.7,
   "timeout_sec": 20,
-  "hostinger_upload_url": "https://royalblue-lion-727879.hostingersite.com/receiver.php?",
+  "hostinger_upload_url": "https://royalblue-lion-727879.hostingersite.com/receiver.php",
   "hostinger_secret": "Asgar_GrandMaster_2049!"
 }
